kubernetes/apps/nextcloud/middleware-add-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-nextcloud-prefix
  namespace: nextcloud
spec:
  addPrefix:
    prefix: /nextcloud
