kubernetes/apps/nextcloud/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-nextcloud
  namespace: nextcloud
spec:
  stripPrefix:
    prefixes:
      - /nextcloud
    forceSlash: false
