kubernetes/apps/nextcloud/ingressroute-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-lan
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/nextcloud`)
      kind: Rule
      middlewares:
        - name: strip-nextcloud
      services:
        - name: nextcloud
          port: 80
