kubernetes/apps/nextcloud/ingressroute-port.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/nextcloud`)
      kind: Rule
      middlewares:
        - name: strip-nextcloud
        - name: https-proto
      services:
        - name: nextcloud
          port: 80
