kubernetes/apps/nextcloud/ingressroute-tunnel.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-tunnel
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nextcloud.lucasrocha.dpdns.org`) && PathPrefix(`/nextcloud`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
      middlewares:
        - name: strip-nextcloud
          namespace: nextcloud
    - match: Host(`nextcloud.lucasrocha.dpdns.org`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
